--- a/src/shared/ui/Modal/ui/Modal.module.css
+++ b/src/shared/ui/Modal/ui/Modal.module.css
@@ -19,6 +19,7 @@
   align-items: center;
 
   background-color: var(--background-primary);
+  color: var(--text-on-control);
   border-radius: 10px;
 
   z-index: 1000;
